Inicio do processo

--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FOCUS</title>
-    <link rel="stylesheet" href="src/style.css">
+    <link rel="stylesheet" href="/src/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <script src="src/main.js"></script>
 </head>
 <body>
@@ -16,8 +17,31 @@
 
         <div class="main">
 
-            <div id="hero-bg" class="hero">
+            <div class="hero">
 
+                <div id="bg-hero">
+                    <img src="src/img/background-img-n3.png" alt="Imagem de background">
+                </div> <!--bg-hero-->
+                    
+                <div id="pomodoro">
+                    
+                    <div id="i-pomodoro-overlay">
+                        <img src="src/icon/Mini balls.gif" alt="gif de spinner">
+                    </div>
+
+                    <span class="btn-icon" id="fa-solid fa-gear"><i class="fa-solid fa-gear"></i></span>
+
+                    <div id="i-timer-progress"></div>
+                    <div id="i-timer-sessions"></div>
+
+                    <div id="i-timer-functions">
+
+                        <div id="i-timer-settings"></div>
+                        <div id="i-timer-buttons"></div>
+
+                    </div> <!-- #i-timer-fuctions-->
+
+                </div> <!--#pomodoro-->
             </div> <!--hero-->
 
             <div class="content">
