--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                             <circle cx="50" cy="50" r="45" class="circle-background"></circle>
                             <circle cx="50" cy="50" r="45" class="circle-progress"></circle>
                             <text id="i-timer-time" x="50" y="50" text-anchor="middle" dy=".3em" font-size="18">25:00</text>
-                            <text id="i-timer-pause" x="50" y="68" text-anchor="middle" dy=".3em" font-size="7">Pausa:</text>
+                            <text id="i-timer-paused" x="50" y="68" text-anchor="middle" dy=".3em" font-size="7">Pausa:</text>
                             <text id="i-timer-rest" x="50" y="68" text-anchor="middle" dy=".3em" font-size="7">Recomeçar</text>
 						</svg>
                     </div> <!--#i-timer-progress-->
@@ -119,9 +119,9 @@
 
                         <div id="i-timer-buttons">
                             <button id="pause-btn"><i class="material-symbols-outlined">pause</i></button>
-                            <button id="start-btn"><i class="material-symbols-outlined">play_arrow</i></button> -->
+                            <button id="start-btn"><i class="material-symbols-outlined">play_arrow</i></button>
                         </div>
-                            </span>
+                            
 
                     </div> <!-- #i-timer-fuctions-->
 
